--- a/404.html
+++ b/404.html
@@ -7,13 +7,13 @@
 <meta name=color-scheme content="light dark"><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://example.org/404.html">
+<meta property="og:url" content="https://quirinecker.github.io/beamvr-webpage/404.html">
 <title>404 Page not found | My New Hugo Site</title>
-<link rel=manifest href=/manifest.json>
-<link rel=icon href=/favicon.png type=image/x-icon>
-<link rel=stylesheet href=/book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css integrity="sha256-RhgbyTN1upMgJudTs3xA5v+LsWqe93DHi8xmPkV3sbo=" crossorigin=anonymous>
-<script defer src=/flexsearch.min.js></script>
-<script defer src=/en.search.min.f5e113a96ed8fb1ac75f20c1118d5794282460adf78b5a9b6c3ec1227e1933fa.js integrity="sha256-9eETqW7Y+xrHXyDBEY1XlCgkYK33i1qbbD7BIn4ZM/o=" crossorigin=anonymous></script>
+<link rel=manifest href=/beamvr-webpage/manifest.json>
+<link rel=icon href=/beamvr-webpage/favicon.png type=image/x-icon>
+<link rel=stylesheet href=/beamvr-webpage/book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css integrity="sha256-RhgbyTN1upMgJudTs3xA5v+LsWqe93DHi8xmPkV3sbo=" crossorigin=anonymous>
+<script defer src=/beamvr-webpage/flexsearch.min.js></script>
+<script defer src=/beamvr-webpage/en.search.min.27a6109a75c552f7afe4ba633147a1fc38071315b9ce3f3f1d4ed459009b62f0.js integrity="sha256-J6YQmnXFUvev5LpjMUeh/DgHExW5zj8/HU7UWQCbYvA=" crossorigin=anonymous></script>
 <style>.not-found{text-align:center}.not-found h1{margin:.25em 0 0;opacity:.25;font-size:40vmin}</style>
 </head>
 <body>
@@ -22,7 +22,7 @@
 <h1>404</h1>
 <h2>Page Not Found</h2>
 <h3>
-<a href=/>My New Hugo Site</a>
+<a href=/beamvr-webpage/>My New Hugo Site</a>
 </h3>
 </div>
 </main>
