--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <meta name=color-scheme content="light dark"><meta property="og:title" content="My New Hugo Site">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://example.org/">
+<meta property="og:url" content="https://quirinecker.github.io/beamvr-webpage/">
 <title>My New Hugo Site | My New Hugo Site</title>
-<link rel=manifest href=/manifest.json>
-<link rel=icon href=/favicon.png type=image/x-icon>
-<link rel=stylesheet href=/book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css integrity="sha256-RhgbyTN1upMgJudTs3xA5v+LsWqe93DHi8xmPkV3sbo=" crossorigin=anonymous>
-<script defer src=/flexsearch.min.js></script>
-<script defer src=/en.search.min.f5e113a96ed8fb1ac75f20c1118d5794282460adf78b5a9b6c3ec1227e1933fa.js integrity="sha256-9eETqW7Y+xrHXyDBEY1XlCgkYK33i1qbbD7BIn4ZM/o=" crossorigin=anonymous></script>
-<link rel=alternate type=application/rss+xml href=http://example.org/index.xml title="My New Hugo Site">
+<link rel=manifest href=/beamvr-webpage/manifest.json>
+<link rel=icon href=/beamvr-webpage/favicon.png type=image/x-icon>
+<link rel=stylesheet href=/beamvr-webpage/book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css integrity="sha256-RhgbyTN1upMgJudTs3xA5v+LsWqe93DHi8xmPkV3sbo=" crossorigin=anonymous>
+<script defer src=/beamvr-webpage/flexsearch.min.js></script>
+<script defer src=/beamvr-webpage/en.search.min.27a6109a75c552f7afe4ba633147a1fc38071315b9ce3f3f1d4ed459009b62f0.js integrity="sha256-J6YQmnXFUvev5LpjMUeh/DgHExW5zj8/HU7UWQCbYvA=" crossorigin=anonymous></script>
+<link rel=alternate type=application/rss+xml href=https://quirinecker.github.io/beamvr-webpage/index.xml title="My New Hugo Site">
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -25,7 +25,7 @@
 <div class=book-menu-content>
 <nav>
 <h2 class=book-brand>
-<a class="flex align-center" href=/><span>My New Hugo Site</span>
+<a class="flex align-center" href=/beamvr-webpage/><span>My New Hugo Site</span>
 </a>
 </h2>
 <div class=book-search>
@@ -41,11 +41,11 @@
 <header class=book-header>
 <div class="flex align-center justify-between">
 <label for=menu-control>
-<img src=/svg/menu.svg class=book-icon alt=Menu>
+<img src=/beamvr-webpage/svg/menu.svg class=book-icon alt=Menu>
 </label>
 <strong>My New Hugo Site</strong>
 <label for=toc-control>
-<img src=/svg/toc.svg class=book-icon alt="Table of Contents">
+<img src=/beamvr-webpage/svg/toc.svg class=book-icon alt="Table of Contents">
 </label>
 </div>
 <aside class="hidden clearfix">
