--- a/404.html
+++ b/404.html
@@ -8,12 +8,12 @@
 <meta property="og:description" content>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://quirinecker.github.io/beamvr-webpage/404.html">
-<title>404 Page not found | My New Hugo Site</title>
+<title>404 Page not found | Beam VR</title>
 <link rel=manifest href=/beamvr-webpage/manifest.json>
 <link rel=icon href=/beamvr-webpage/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/beamvr-webpage/book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css integrity="sha256-RhgbyTN1upMgJudTs3xA5v+LsWqe93DHi8xmPkV3sbo=" crossorigin=anonymous>
 <script defer src=/beamvr-webpage/flexsearch.min.js></script>
-<script defer src=/beamvr-webpage/en.search.min.27a6109a75c552f7afe4ba633147a1fc38071315b9ce3f3f1d4ed459009b62f0.js integrity="sha256-J6YQmnXFUvev5LpjMUeh/DgHExW5zj8/HU7UWQCbYvA=" crossorigin=anonymous></script>
+<script defer src=/beamvr-webpage/en.search.min.52998953b36207f3e7fb2cc4027f1d358817f314a920d1e63dc33bfae1a06d0c.js integrity="sha256-UpmJU7NiB/Pn+yzEAn8dNYgX8xSpINHmPcM7+uGgbQw=" crossorigin=anonymous></script>
 <style>.not-found{text-align:center}.not-found h1{margin:.25em 0 0;opacity:.25;font-size:40vmin}</style>
 </head>
 <body>
@@ -22,7 +22,7 @@
 <h1>404</h1>
 <h2>Page Not Found</h2>
 <h3>
-<a href=/beamvr-webpage/>My New Hugo Site</a>
+<a href=/beamvr-webpage/>Beam VR</a>
 </h3>
 </div>
 </main>
