--- a/404.html
+++ b/404.html
@@ -8,12 +8,13 @@
 <meta property="og:description" content>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://quirinecker.github.io/beamvr-webpage/404.html">
-<title>404 Page not found | Beam VR</title>
+<title>404 Page not found | Beam Vr</title>
 <link rel=manifest href=/beamvr-webpage/manifest.json>
 <link rel=icon href=/beamvr-webpage/favicon.png type=image/x-icon>
-<link rel=stylesheet href=/beamvr-webpage/book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css integrity="sha256-RhgbyTN1upMgJudTs3xA5v+LsWqe93DHi8xmPkV3sbo=" crossorigin=anonymous>
+<link rel=stylesheet href=/beamvr-webpage/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
 <script defer src=/beamvr-webpage/flexsearch.min.js></script>
-<script defer src=/beamvr-webpage/en.search.min.52998953b36207f3e7fb2cc4027f1d358817f314a920d1e63dc33bfae1a06d0c.js integrity="sha256-UpmJU7NiB/Pn+yzEAn8dNYgX8xSpINHmPcM7+uGgbQw=" crossorigin=anonymous></script>
+<script defer src=/beamvr-webpage/en.search.min.fdf341cff1cd09683303249750506fd885e57bf4859fb53a682f142b03e9368f.js integrity="sha256-/fNBz/HNCWgzAySXUFBv2IXle/SFn7U6aC8UKwPpNo8=" crossorigin=anonymous></script>
+<script defer src=/beamvr-webpage/sw.min.77e93dc1a03cdfce498960d70ac9a1a63cf180acf3c4c095d80f096693ed5cd6.js integrity="sha256-d+k9waA8385JiWDXCsmhpjzxgKzzxMCV2A8JZpPtXNY=" crossorigin=anonymous></script>
 <style>.not-found{text-align:center}.not-found h1{margin:.25em 0 0;opacity:.25;font-size:40vmin}</style>
 </head>
 <body>
@@ -22,7 +23,7 @@
 <h1>404</h1>
 <h2>Page Not Found</h2>
 <h3>
-<a href=/beamvr-webpage/>Beam VR</a>
+<a href=/beamvr-webpage/>Beam Vr</a>
 </h3>
 </div>
 </main>
