--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content>
 <meta name=theme-color content="#FFFFFF">
-<meta name=color-scheme content="light dark"><meta property="og:title" content="Beam VR">
+<meta name=color-scheme content="light dark"><meta property="og:title" content="Beam Vr">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://quirinecker.github.io/beamvr-webpage/">
-<title>Beam VR | Beam VR</title>
+<title>Beam Vr | Beam Vr</title>
 <link rel=manifest href=/beamvr-webpage/manifest.json>
 <link rel=icon href=/beamvr-webpage/favicon.png type=image/x-icon>
-<link rel=stylesheet href=/beamvr-webpage/book.min.46181bc93375ba932026e753b37c40e6ff8bb16a9ef770c78bcc663e4577b1ba.css integrity="sha256-RhgbyTN1upMgJudTs3xA5v+LsWqe93DHi8xmPkV3sbo=" crossorigin=anonymous>
+<link rel=stylesheet href=/beamvr-webpage/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
 <script defer src=/beamvr-webpage/flexsearch.min.js></script>
-<script defer src=/beamvr-webpage/en.search.min.52998953b36207f3e7fb2cc4027f1d358817f314a920d1e63dc33bfae1a06d0c.js integrity="sha256-UpmJU7NiB/Pn+yzEAn8dNYgX8xSpINHmPcM7+uGgbQw=" crossorigin=anonymous></script>
-<link rel=alternate type=application/rss+xml href=https://quirinecker.github.io/beamvr-webpage/index.xml title="Beam VR">
+<script defer src=/beamvr-webpage/en.search.min.fdf341cff1cd09683303249750506fd885e57bf4859fb53a682f142b03e9368f.js integrity="sha256-/fNBz/HNCWgzAySXUFBv2IXle/SFn7U6aC8UKwPpNo8=" crossorigin=anonymous></script>
+<script defer src=/beamvr-webpage/sw.min.77e93dc1a03cdfce498960d70ac9a1a63cf180acf3c4c095d80f096693ed5cd6.js integrity="sha256-d+k9waA8385JiWDXCsmhpjzxgKzzxMCV2A8JZpPtXNY=" crossorigin=anonymous></script>
+<link rel=alternate type=application/rss+xml href=https://quirinecker.github.io/beamvr-webpage/index.xml title="Beam Vr">
 </head>
 <body dir=ltr>
 <input type=checkbox class="hidden toggle" id=menu-control>
@@ -25,7 +26,7 @@
 <div class=book-menu-content>
 <nav>
 <h2 class=book-brand>
-<a class="flex align-center" href=/beamvr-webpage/><span>Beam VR</span>
+<a class="flex align-center" href=/beamvr-webpage/><span>Beam Vr</span>
 </a>
 </h2>
 <div class=book-search>
@@ -35,13 +36,23 @@
 </div>
 <ul>
 <li>
-<a href=https://quirinecker.github.io/beamvr-webpage/docs/info/desccription/>Description</a>
+<a href=/beamvr-webpage/docs/setup/>Setup</a>
+<ul>
+<li>
+<a href=/beamvr-webpage/docs/setup/start/>Start</a></li>
+</ul>
+</li>
+</ul>
+<ul>
+<li>
+<a href=https://github.com/alex-shpak/hugo-book target=_blank rel=noopener>
+Github
+</a>
 </li>
 <li>
-<a href=https://quirinecker.github.io/beamvr-webpage/docs/setup/start/>Start Application</a>
-</li>
-<li>
-<a href=https://quirinecker.github.io/beamvr-webpage/docs/setup/steamvr/>SteamVR</a>
+<a href=https://themes.gohugo.io/hugo-book/ target=_blank rel=noopener>
+Hugo Themes
+</a>
 </li>
 </ul>
 </nav>
@@ -54,7 +65,7 @@
 <label for=menu-control>
 <img src=/beamvr-webpage/svg/menu.svg class=book-icon alt=Menu>
 </label>
-<strong>Beam VR</strong>
+<strong>Beam Vr</strong>
 <label for=toc-control>
 <img src=/beamvr-webpage/svg/toc.svg class=book-icon alt="Table of Contents">
 </label>
