deploy: 0b50d7fdfaec7c272d0d8914cde5181016994623

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel=icon href=/beamvr-webpage/favicon.png type=image/x-icon>
 <link rel=stylesheet href=/beamvr-webpage/book.min.95d69eb6bad8b9707ff2b5d8d9e31ce70a1b84f2ed7ffaf665ffcf00aa7993bd.css integrity="sha256-ldaetrrYuXB/8rXY2eMc5wobhPLtf/r2Zf/PAKp5k70=" crossorigin=anonymous>
 <script defer src=/beamvr-webpage/flexsearch.min.js></script>
-<script defer src=/beamvr-webpage/en.search.min.fd09ca60c5dd0a651ca0f7812b92815cc68b6b653bc39813db4f566eb772afbe.js integrity="sha256-/QnKYMXdCmUcoPeBK5KBXMaLa2U7w5gT209Wbrdyr74=" crossorigin=anonymous></script>
+<script defer src=/beamvr-webpage/en.search.min.56f0801ca6a4e738a7627bca2d5c9f22333decd5c40471866b88e3a221e13be0.js integrity="sha256-VvCAHKak5zinYnvKLVyfIjM97NXEBHGGa4jjoiHhO+A=" crossorigin=anonymous></script>
 <script defer src=/beamvr-webpage/sw.min.77e93dc1a03cdfce498960d70ac9a1a63cf180acf3c4c095d80f096693ed5cd6.js integrity="sha256-d+k9waA8385JiWDXCsmhpjzxgKzzxMCV2A8JZpPtXNY=" crossorigin=anonymous></script>
 <link rel=alternate type=application/rss+xml href=https://quirinecker.github.io/beamvr-webpage/index.xml title="Beam Vr">
 </head>
@@ -40,6 +40,10 @@
 <ul>
 <li>
 <a href=/beamvr-webpage/docs/setup/start-application/>Start Application</a></li>
+<li>
+<a href=/beamvr-webpage/docs/setup/setup-vr-glasses-wireless/>Setup VR Glasses Wireless</a></li>
+<li>
+<a href=/beamvr-webpage/docs/setup/setup-vr-glasses-wired/>Setup VR Glasses Wired</a></li>
 </ul>
 </li>
 <li>
